# al-raid-bot

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
query/: activities.gql  activity_replies.gql  in_media_list.gql  users.gql
src/: anilist.rs  embeds.rs  main.rs  resources.rs  util.rs  webhooks.rs
