[package]
name = "al-raid-bot"
version = "0.1.0"
authors = ["nnazo <jacobcurtis2266@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio =  { version = "0.3.1", features = ["full"] }
reqwest = { version = "0.10.8", features = ["json", "blocking"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.53"
anyhow = "1.0.31"
dotenv = "0.15.0"
discord = { git = "https://github.com/SpaceManiac/discord-rs", rev = "e303da2" }
rust-embed = { version = "5.6.0", features = ["compression"] }
once_cell = "1.4.0"
